<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification">notification</string>
    <string name="notification_channel_id" translatable="false">notification_channel</string>
    <string name="check_the_status">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio_button_name">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_button_name">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button_name">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="radio_button_not_change">Pleas select the file to download</string>

    <string name="ok_button_text">OK</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>


</resources>
