<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_detail_ok_button"
    app:layoutDescription="@xml/animation_ok_button"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"><![CDATA[
    >

    ]]>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_detail_ok_button"
        android:background="@color/colorAccent"
        android:text="@string/ok_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="593dp" />

    <TextView
        android:id="@+id/fileNameTiltle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_detail_ok_button"
        android:text="@string/file_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_detail_ok_button"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileNameTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="167dp" />

    <TextView
        android:id="@+id/fileNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_detail_ok_button"
        android:maxWidth="180dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_detail_ok_button"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/fileNameTextView" />
</androidx.constraintlayout.motion.widget.MotionLayout>